syntax = "proto3";

message AllDataTypes {
  double double_type = 1;
  float float_type = 2;
  int32 int32_type = 3;
  int64 int64_type = 4;
  uint32 uint32_type = 5;
  uint64 uint64_type = 6;
  sint32 sint32_type = 7;
  sint64 sint64_type = 8;
  fixed32 fixed32_type = 9;
  fixed64 fixed64_type = 10;
  sfixed32 sfixed32_type = 11;
  sfixed64 sfixed64_type = 12;
  bool bool_type = 13;
  string string_type = 14;
}

message AllDataTypesSelfNested {
  double double_type = 1;
  float float_type = 2;
  int32 int32_type = 3;
  int64 int64_type = 4;
  uint32 uint32_type = 5;
  uint64 uint64_type = 6;
  sint32 sint32_type = 7;
  sint64 sint64_type = 8;
  fixed32 fixed32_type = 9;
  fixed64 fixed64_type = 10;
  sfixed32 sfixed32_type = 11;
  sfixed64 sfixed64_type = 12;
  bool bool_type = 13;
  string string_type = 14;
  AllDataTypes all_data_types = 15;
}

message AllDataTypesRepeated {
  repeated double double_type = 1;
  repeated float float_type = 2;
  repeated int32 int32_type = 3;
  repeated int64 int64_type = 4;
  repeated uint32 uint32_type = 5;
  repeated uint64 uint64_type = 6;
  repeated sint32 sint32_type = 7;
  repeated sint64 sint64_type = 8;
  repeated fixed32 fixed32_type = 9;
  repeated fixed64 fixed64_type = 10;
  repeated sfixed32 sfixed32_type = 11;
  repeated sfixed64 sfixed64_type = 12;
  repeated bool bool_type = 13;
  repeated string string_type = 14;
}
